# nerd-athletic-blog

./: .gitignore  LICENSE  README.md  config.yaml  index.html  pyproject.toml  requirements.txt  styles.css
css/: burger-menu.css  graph.css  sidenotes.css  styles.css  syntax.css
js/: burger-menu.js  sidenotes.js
posts/building-a-rest-api-with-fastapi/: building-a-rest-api-with-fastapi.md
posts/calculating-critical-speed/: calculating-critical-speed.md
posts/critical-speed-model/: anaerobic-aerobic-graph.js  critical-speed-graph.js  critical-speed-model.md  power-duration-graph.js
posts/did-i-just-get-to-the-bottom-of-the-strava-tax/: did-i-just-get-to-the-bottom-of-the-strava-tax.md
posts/docker-for-python-developers/: docker-for-python-developers.md
posts/grade-adjusted-pace-intro/: grade-adjusted-pace-intro.md
posts/hello-world/: hello-world.md
posts/sample-placeholder/: sample-placeholder.md
posts/testing-python-applications/: testing-python-applications.md
posts/the-art-of-code-refactoring/: the-art-of-code-refactoring.md
posts/understanding-python-decorators/: understanding-python-decorators.md
scripts/: config.py  generate_favicon.py  generate_syntax_styles.py  inline_footnotes_plugin.py  main.py  new_post.py  render_index.py  render_post.py  render_static_page.py  render_tag_page.py  serve.py  utils.py
static/about/: index.md
static/author/roger-willis/: index.md
templates/: base.tmpl  index.tmpl  post.tmpl  static.tmpl  tag.tmpl
